# openapi/api.yaml
@@ -204,6 +204,54 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorBase"
+  /cluster/databases:
+    get:
+      tags:
+        - cluster
+      summary: Get cluster databases
+      description: Returns a list of all available databases with their details
+      operationId: DatabasesDetails
+      parameters:
+        - name: sort
+          description: Field to sort by
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [size, connection]
+          x-oapi-codegen-extra-tags:
+            validate: "omitempty,oneof=size connection"
+        - name: order
+          description: Sort direction
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [asc, desc]
+          x-oapi-codegen-extra-tags:
+            validate: "omitempty,oneof=asc desc"
+          # default: desc
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Database"
+        "400":
+          description: Attempt failed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorBase"
+        "422":
+          description: Some query params are invalid
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RequestValidationError"
 components:
   schemas:
     ErrorBase:
@@ -261,6 +309,65 @@ components:
         description:
           type: string
           example: Sets the number of...
+    Database:
+      type: object
+      description: Represents database entity from Postgres system catalog
+      x-go-type: clusterEntities.DatabaseDetails
+      x-go-type-import:
+        path: dashboard/api/internal/scopes/cluster/entities
+        name: DatabaseDetails
+      x-go-type-name: clusterEntities.DatabaseDetails
+      required:
+        - id
+        - name
+        - owner
+        - encoding
+        - collate
+        - ctype
+        - isTemplate
+        - allowConnections
+        - connectionLimit
+        - sizeBytes
+        - sizePretty
+        - activeConnections
+      properties:
+        id:
+          type: string
+          description: This is essentially a Postgres OID.
+          example: "1"
+        name:
+          type: string
+          example: postgres
+        owner:
+          type: string
+          example: postgres
+        encoding:
+          type: string
+          example: UTF8
+        collate:
+          type: string
+          example: en_US.UTF-8
+        ctype:
+          type: string
+          example: en_US.UTF-8
+        isTemplate:
+          type: boolean
+          example: false
+        allowConnections:
+          type: boolean
+          example: true
+        connectionLimit:
+          type: integer
+          example: -1
+        sizeBytes:
+          type: integer
+          example: 7746019
+        sizePretty:
+          type: string
+          example: "6.4 MB"
+        activeConnections:
+          type: integer
+          example: 3
     GetStatusResponse:
       type: object
       required:
